Report 重構 & else update
